# IFJ22-Compiler

./: .gitignore  CMakeLists.txt  README.md  compiler.h  lexical_analysis.c  lexical_analysis.h  main.c  symtab.c  symtab.h
src/: compiler.c  compiler.h  dll.c  dll.h  expression.c  expression.h  generator.c  generator.h  lexical_analysis.c  lexical_analysis.h  main.c  stack.c  stack.h  symtab.c  symtab.h  syntactic_analysis.c  syntactic_analysis.h
tests/: CMakeLists.txt  ex1.php  ex2.php  ex3.php  ex4.php  ex5.php  ex6.php  test.py  test_expression1.c  test_expression_1.c  test_lexer.c  test_lexer_1.sh  test_lexer_2.sh  test_lexer_3.sh  test_parser.c  test_stack.c
tests/tests/Lexer/FloatOur/Float1/: prog
tests/tests/Lexer/FloatOur/Float2/: prog
tests/tests/Lexer/FloatOur/Float3/: prog
tests/tests/Lexer/FloatOur/Float4/: prog
tests/tests/Lexer/FloatOur/Float5/: prog
tests/tests/Lexer/FloatOur/Float6/: prog
tests/tests/Lexer/FloatOur/Float7/: prog
tests/tests/Lexer/FloatOur/Float8/: prog
tests/tests/Lexer/FloatOur/Float9/: prog
tests/tests/Special/Keyword variable assigment/: prog
